tests/invalid/bad_rel_imm.s
  .text

    .global _start
_start:
  lw r1, [r0, 0x8000]
